Updated Headshot circular image
new path: headshotcircular.png

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <td><a href="https://www.linkedin.com/in/corderodc/">
-        <img height="100" src="/Users/david.cordero/Desktop/Web Development/HTML - Personal Site/headshotcircular.png" alt="David's Headshot">
+        <img height="100" src="headshotcircular.png" alt="David's Headshot">
       </a></td>
     <td>
       <h3>David Cordero</h3>
