removed 2021 Goals link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <hr size="6" color=blue <br>
   <hr size="6" color=orange <br>
   <hr size="6" color=blue <br>
-  <h3><a href="goals.html">2021 Goals</a></h3>
+  <h3>2021 Goals</h3>
   <ul>
     <li>Cycle 3,000 miles</li>
     <li>Complete a Century Ride (100+ miles)</li>
